kube/user_service/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  user-service
  labels:
    name:  user-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  user-service
    spec:
      containers:
      - image: europe-west2-docker.pkg.dev/4WEBD/webd-384707/user-service:0.1
        name: user-service
        resources:
          limits:
            cpu: "1000m"
            memory: "1024M"
          requests:
            cpu: "100m"
            memory: "1024M"
        ports:
        - containerPort: 3000
          name: user-service
        volumeMounts:
        - mountPath: /usr/src/app/.env
          subPath: .env
          name: env
      volumes:
        - name: env
          configMap:
            name: ticketforge
      restartPolicy: Always
      imagePullPolicy: Always
