kube/user_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service
  labels:
    name: user-service
spec:
  rules:
  - host: ticketforge.com/users
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-service
            port: 
              number: 80
